Hide page content until initial mount to prevent the jumping footer

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -624,3 +624,12 @@ pre[class*='language-'] {
   font-size: 16px;
   color: #eee8a9;
 }
+
+/* Hide the page content until the Layout component mounts */
+.initial {
+  opacity: 0;
+}
+
+.loaded {
+  opacity: 1 !important;
+}
